# codecoverage-cli

./: .gitignore  README.md  pyproject.toml
src/codecoverage/: __init__.py  __main__.py
src/codecoverage/agents/: base.py  tools.py
src/codecoverage/analysis/: __init__.py  decision_extractor.py  dependencies.py  package_cache.py  test_finder.py  test_patterns.py  test_refs.py  test_resolver.py  venv_scanner.py
src/codecoverage/cli/: main.py  ui.py
src/codecoverage/cli/commands/: diff_test.py  document.py  generate.py  init.py  serve.py
src/codecoverage/core/: codebase.py  config.py  doc_cache.py  markdown_renderer.py  metrics.py  parser.py  state.py
src/codecoverage/git/: __init__.py  diff.py
src/codecoverage/llm/: providers.py
src/codecoverage/search/: __init__.py
src/codecoverage/tracing/: reader.py
src/codecoverage/utils/: ast_utils.py  file_utils.py
src/codecoverage/web/: app.py  flow_tracer.py  flows_page.py  schema_generator.py  server.py
tests/: conftest.py
tests/integration/: test_cli_integration.py  test_full_workflow.py
tests/unit/agents/: agent_tools.py
tests/unit/analysis/: test_dependencies.py  test_test_patterns.py  test_test_resolver.py  test_venv_scanner.py
tests/unit/cli/: test_cli_commands.py
tests/unit/core/: test_parser.py
tests/unit/web/: test_markdown_renderer.py
